fix: New Persian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -265,7 +265,7 @@
   "Add emoji": "Add emoji",
   "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
   "Upload an image": "بارگذاری تصویر",
-  "Click or drag to replace": "Click or drag to replace",
+  "Click or drag to replace": "",
   "Drop the image here": "Drop the image here",
   "Click, drop, or paste an image here": "Click, drop, or paste an image here",
   "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
@@ -678,6 +678,7 @@
   "90 days": "90 روز",
   "No expiration": "بدون انقضا",
   "The document archive is empty at the moment.": "آرشیو اسناد در حال حاضر خالی است.",
+  "Done editing": "اتمام ویرایش",
   "Drop documents to import": "اسناد را بکشید تا وارد شوند",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> هنوز هیچ سندی ندارد.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} کاربر و {{ groupsCount }} گروه دارای دسترسی هستند",
@@ -688,15 +689,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} کاربر دارای دسترسی هستند",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} گروه دارای دسترسی هستند",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} گروه دارای دسترسی هستند",
-  "Archived by {{userName}}": "آرشیو شده توسط {{userName}}",
-  "Sorry, an error occurred saving the collection": "متاسفانه خطایی در ذخیره‌سازی مجموعه رخ داد",
-  "Add a description": "توضیحاتی اضافه کنید",
   "Overview": "بررسی کلی",
   "Popular": "Popular",
   "Recently updated": "آخرین به‌روزرسانی",
   "Recently published": "آخرین انتشار",
   "Least recently updated": "اولین به‌روزرسانی",
   "A–Z": "الفبایی",
+  "Archived by {{userName}}": "آرشیو شده توسط {{userName}}",
+  "Sorry, an error occurred saving the collection": "متاسفانه خطایی در ذخیره‌سازی مجموعه رخ داد",
+  "Add a description": "توضیحاتی اضافه کنید",
   "Signing in": "در حال ورود",
   "You can safely close this window once the Outline desktop app has opened": "پس از باز شدن برنامه دسکتاپ Outline می‌توانید این پنجره را با اطمینان ببندید",
   "Error creating comment": "خطا در ایجاد نظر",
@@ -745,7 +746,6 @@
   "Edit {{noun}}": "ویرایش {{noun}}",
   "Archived": "بایگانی شده",
   "Save draft": "ذخیره پیش‌نویس",
-  "Done editing": "اتمام ویرایش",
   "Restore version": "بازیابی نسخه",
   "No history yet": "هیچ سابقه‌ای وجود ندارد",
   "Source": "منبع",
