fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -113,8 +113,8 @@
   "You have left the shared document": "Ви залишили спільний документ",
   "Could not leave document": "Не вдалося покинути документ",
   "Apply template": "Застосувати шаблон",
-  "New emoji": "New emoji",
-  "Upload emoji": "Upload emoji",
+  "New emoji": "Нові емодзі",
+  "Upload emoji": "Завантажити емодзі",
   "Disconnect": "Від'єднатись",
   "Disconnect analytics": "Від'єднати аналітику",
   "Home": "Головна",
@@ -174,7 +174,7 @@
   "Navigation": "Навігація",
   "Notification": "Сповіщення",
   "Groups": "Групи",
-  "Emoji": "Emoji",
+  "Emoji": "Емодзі",
   "People": "Люди",
   "Share": "Поширити",
   "Workspace": "Робочий простір",
@@ -191,7 +191,7 @@
   "Public document sharing": "Публічний обмін документами",
   "Allow documents within this collection to be shared publicly on the internet.": "Дозволити документам у цій колекції публічно ділитись в інтернеті.",
   "Commenting": "Коментування",
-  "Allow commenting on documents within this collection.": "Allow commenting on documents within this collection.",
+  "Allow commenting on documents within this collection.": "Дозволити коментування документів у цій колекції.",
   "Saving": "Зберегти",
   "Save": "Зберегти",
   "Creating": "Створення",
@@ -210,7 +210,7 @@
   "view and edit access": "право перегляду та редагування",
   "view only access": "доступ лише на перегляд",
   "no access": "немає доступу",
-  "You do not have permission to move {{ documentName }} to the {{ collectionName }} collection": "You do not have permission to move {{ documentName }} to the {{ collectionName }} collection",
+  "You do not have permission to move {{ documentName }} to the {{ collectionName }} collection": "Ви не маєте дозволу на переміщення {{ documentName }} до {{ collectionName }} колекції",
   "Move document": "Перемістити документ",
   "Moving": "Переміщення",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Переміщення документа <em>{{ title }}</em> до колекції {{ newCollectionName }} призведе до зміни дозволу для всіх учасників робочої області з <em>{{ prevPermission }}</em> на <em>{{ newPermission }}</em>.",
@@ -220,11 +220,11 @@
   "Deleted Collection": "Видалена колекція",
   "Untitled": "Без назви",
   "Unpin": "Відкріпити",
-  "Select a location to copy": "Select a location to copy",
-  "Document copied": "Document copied",
-  "Couldn’t copy the document, try again?": "Couldn’t copy the document, try again?",
+  "Select a location to copy": "Виберіть місце для копіювання",
+  "Document copied": "Документ скопійовано",
+  "Couldn’t copy the document, try again?": "Не вдалося скопіювати документ, спробуйте ще раз?",
   "Include nested documents": "Включаючи вкладені документи",
-  "Copy to <em>{{ location }}</em>": "Copy to <em>{{ location }}</em>",
+  "Copy to <em>{{ location }}</em>": "Скопіювати до <em>{{ location }}</em>",
   "Search collections & documents": "Пошук колекцій і документів",
   "No results found": "Результатів не знайдено",
   "Document options": "Налаштування документа",
@@ -256,31 +256,31 @@
   "Currently editing": "Зараз редагується",
   "Currently viewing": "Зараз переглядають",
   "Viewed {{ timeAgo }}": "Переглянуто {{ timeAgo }}",
-  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
-  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
-  "Please enter a name for the emoji": "Please enter a name for the emoji",
-  "Please select an image file": "Please select an image file",
-  "Emoji created successfully": "Emoji created successfully",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "Тип файлу не підтримується. Будь ласка, використайте PNG, JPG, GIF або WebP.",
+  "File size too large. Maximum size is {{ size }}.": "Надто великий розмір файлу. Максимальний розмір файлу {{ size }}.",
+  "Please enter a name for the emoji": "Будь ласка, введіть назву для емодзі",
+  "Please select an image file": "Будь ласка, виберіть зображення",
+  "Emoji created successfully": "Емодзі успішно створено",
   "Uploading": "Завантажується",
-  "Add emoji": "Add emoji",
-  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
-  "Upload an image": "Upload an image",
-  "Click or drag to replace": "Click or drag to replace",
-  "Drop the image here": "Drop the image here",
-  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
-  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
-  "Choose a name": "Choose a name",
-  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
-  "This emoji will be available as": "This emoji will be available as",
+  "Add emoji": "Додати емодзі",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Квадратні зображення з прозорим тлом найкраще працюють. Якщо ваше зображення завелике, ми спробуємо змінити розмір для вас.",
+  "Upload an image": "Завантажити зображення",
+  "Click or drag to replace": "Натисніть або перетягніть для заміни",
+  "Drop the image here": "Перетягніть зображення сюди",
+  "Click, drop, or paste an image here": "Натисніть, викиньте або вставте зображення тут",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF або WebP до {{ size }}",
+  "Choose a name": "Виберіть назву",
+  "name can only contain lowercase letters, numbers, and underscores.": "назва може містити лише малі літери, цифри та знаки підкреслення.",
+  "This emoji will be available as": "Цей емодзі буде доступний як",
   "Module failed to load": "Не вдалося завантажити модуль",
   "Loading Failed": "Не вдалося завантажити",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "На жаль, не вдалося завантажити частину програми. Це може бути тому, що вона була оновлена після того, як ви відкрили вкладку або через невдалий мережевий запит. Будь ласка, спробуйте перезавантажити.",
   "Reload": "Перезавантажити",
   "Something Unexpected Happened": "Щось пішло не так",
-  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "Помилка виникала останнім часом декілька раз. Якщо так і продовжиться, спробуйте очистити кеш або скористатися іншим браузером.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Вибачте, сталася невиправна помилка{{notified}}. Спробуйте перезавантажити сторінку, можливо, це був тимчасовий збій.",
   "our engineers have been notified": "наші інженери були повідомлені",
-  "Clear cache + reload": "Clear cache + reload",
+  "Clear cache + reload": "Очистити кеш + перезавантажити",
   "Show detail": "Показати деталі",
   "{{userName}} archived": "{{userName}} заархівовано",
   "{{userName}} restored": "{{userName}} відновлено",
@@ -301,14 +301,14 @@
   "You will receive an email when it's complete.": "Ви отримаєте електронного листа після його завершення.",
   "Include attachments": "Включити вкладення",
   "Including uploaded images and files in the exported data": "Включити завантажені зображення та файли в експортовані дані",
-  "Include private collections": "Include private collections",
+  "Include private collections": "Включити приватні колекції",
   "{{count}} more user": "{{count}} додатковий користувач",
   "{{count}} more user_plural": "{{count}} додаткових користувачів",
-  "Filter options": "Filter options",
+  "Filter options": "Налаштування фільтру",
   "Filter": "Фільтр",
   "No results": "Нічого не знайдено",
-  "{{ count }} members": "{{ count }} member",
-  "{{ count }} members_plural": "{{ count }} members",
+  "{{ count }} members": "{{ count }} учасник",
+  "{{ count }} members_plural": "{{ count }} учасників",
   "{{authorName}} created <3></3>": "{{authorName}} створив <3></3>",
   "{{authorName}} opened <3></3>": "{{authorName}} відкрив <3></3>",
   "Search emoji": "Пошук емодзі",
@@ -330,14 +330,14 @@
   "Objects": "Об'єкти",
   "Symbols": "Символи",
   "Flags": "Прапори",
-  "Custom": "Custom",
+  "Custom": "Користувацький",
   "View only": "Тільки перегляд",
   "Can edit": "Можна редагувати",
   "No access": "Немає доступу",
   "Permission": "Права доступу",
   "Change Language": "Змінити мову",
   "Dismiss": "Відхилити",
-  "Unable to download image": "Unable to download image",
+  "Unable to download image": "Зображення не завантажується",
   "Lightbox": "Lightbox",
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Zoom in": "Zoom in",
@@ -678,6 +678,7 @@
   "90 days": "90 days",
   "No expiration": "No expiration",
   "The document archive is empty at the moment.": "Архів документів на даний час порожній.",
+  "Done editing": "Done editing",
   "Drop documents to import": "Перетягніть документи для імпорту",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> ще не містить жодного\n                    документа.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} користувач і {{ groupsCount }} груп з доступом",
@@ -688,15 +689,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} користувачів з доступом",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} група з доступом",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} груп з доступом",
-  "Archived by {{userName}}": "Архівовано {{userName}}",
-  "Sorry, an error occurred saving the collection": "На жаль, під час збереження колекції сталася помилка",
-  "Add a description": "Додати опис",
   "Overview": "Overview",
   "Popular": "Popular",
   "Recently updated": "Нещодавно оновлені",
   "Recently published": "Нещодавно опубліковані",
   "Least recently updated": "Останнє оновлення",
   "A–Z": "А–Я",
+  "Archived by {{userName}}": "Архівовано {{userName}}",
+  "Sorry, an error occurred saving the collection": "На жаль, під час збереження колекції сталася помилка",
+  "Add a description": "Додати опис",
   "Signing in": "Вхід",
   "You can safely close this window once the Outline desktop app has opened": "Ви можете закрити це вікно, після відкриття програми Outline",
   "Error creating comment": "Помилка створення коментаря",
@@ -745,7 +746,6 @@
   "Edit {{noun}}": "Редагувати {{noun}}",
   "Archived": "Заархівовано",
   "Save draft": "Save draft",
-  "Done editing": "Done editing",
   "Restore version": "Відновити версію",
   "No history yet": "Ще немає історії",
   "Source": "Source",
