fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -138,6 +138,8 @@
   "Log out": "Déconnexion",
   "Mark notifications as read": "Marquer les notifications comme lues",
   "Archive all notifications": "Archiver toutes les notifications",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Nouvelle application",
   "New Application": "Nouvelle application",
   "This version of the document was deleted": "Cette version du document a été supprimée",
@@ -351,6 +353,7 @@
   "Sorry, an error occurred.": "Désolé, une erreur est survenue.",
   "Click to retry": "Cliquez pour réessayer",
   "Back": "Retour",
+  "Notification options": "Notification options",
   "Unknown": "Inconnu",
   "Mark all as read": "Tout marquer comme lu",
   "You're all caught up": "Vous êtes à jour",
@@ -678,6 +681,7 @@
   "90 days": "90 jours",
   "No expiration": "Pas d'expiration",
   "The document archive is empty at the moment.": "Les archives sont vides pour le moment.",
+  "Done editing": "Édition terminée",
   "Drop documents to import": "Déposer les documents à importer",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> ne contient aucun document.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} utilisateur et {{ groupsCount }} groupes ont accès",
@@ -688,15 +692,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} utilisateurs avec accès",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} groupe a accès",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} groupes ont accès",
-  "Archived by {{userName}}": "Archivé par {{userName}}",
-  "Sorry, an error occurred saving the collection": "Désolé, une erreur s'est produite lors de l'enregistrement de la collection",
-  "Add a description": "Ajouter une description",
   "Overview": "Aperçu",
   "Popular": "Populaire",
   "Recently updated": "Récemment mis à jour",
   "Recently published": "Récemment publiés",
   "Least recently updated": "Anciennement modifiés",
   "A–Z": "A – Z",
+  "Archived by {{userName}}": "Archivé par {{userName}}",
+  "Sorry, an error occurred saving the collection": "Désolé, une erreur s'est produite lors de l'enregistrement de la collection",
+  "Add a description": "Ajouter une description",
   "Signing in": "Connexion en cours",
   "You can safely close this window once the Outline desktop app has opened": "Vous pouvez fermer cette fenêtre en toute sécurité après que l'application bureau Outline s'est ouverte",
   "Error creating comment": "Erreur lors de la création du commentaire",
@@ -745,7 +749,6 @@
   "Edit {{noun}}": "Éditer {{noun}}",
   "Archived": "Archivé",
   "Save draft": "Enregistrer le brouillon",
-  "Done editing": "Édition terminée",
   "Restore version": "Restaurer cette version",
   "No history yet": "Pas encore d'historique",
   "Source": "Source",
