fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -138,6 +138,8 @@
   "Log out": "Salir",
   "Mark notifications as read": "Marcar notificaciones como leídas",
   "Archive all notifications": "Archivar todas las notificaciones",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Nueva aplicación",
   "New Application": "Nueva solicitud",
   "This version of the document was deleted": "Esta versión del documento ha sido eliminada",
@@ -351,6 +353,7 @@
   "Sorry, an error occurred.": "Lo sentimos, ha ocurrido un error.",
   "Click to retry": "Haz clic para volver a intentarlo",
   "Back": "Atrás",
+  "Notification options": "Notification options",
   "Unknown": "Desconocido",
   "Mark all as read": "Marcar todas como leídas",
   "You're all caught up": "Estás al día",
@@ -678,6 +681,7 @@
   "90 days": "90 días",
   "No expiration": "Sin expiración",
   "The document archive is empty at the moment.": "El archivo está vacío en este momento.",
+  "Done editing": "Edición finalizada",
   "Drop documents to import": "Arrastra los documentos para importar",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> no contiene documentos aún.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} usuario y {{ groupsCount }} grupos con acceso",
@@ -688,15 +692,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} usuarios con acceso",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} grupo con acceso",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} grupos con acceso",
-  "Archived by {{userName}}": "Archivado por {{userName}}",
-  "Sorry, an error occurred saving the collection": "Lo sentimos, se ha producido un error al guardar la colección",
-  "Add a description": "Añadir una descripción",
   "Overview": "Resumen",
   "Popular": "Popular",
   "Recently updated": "Actualizado recientemente",
   "Recently published": "Publicado recientemente",
   "Least recently updated": "Actualizado menos recientemente",
   "A–Z": "A–Z",
+  "Archived by {{userName}}": "Archivado por {{userName}}",
+  "Sorry, an error occurred saving the collection": "Lo sentimos, se ha producido un error al guardar la colección",
+  "Add a description": "Añadir una descripción",
   "Signing in": "Iniciando sesión",
   "You can safely close this window once the Outline desktop app has opened": "Puede cerrar esta ventana de forma segura una vez que se haya abierto la aplicación de escritorio de Outline",
   "Error creating comment": "Error creando el comentario",
@@ -745,7 +749,6 @@
   "Edit {{noun}}": "Editar {{noun}}",
   "Archived": "Archivado",
   "Save draft": "Guardar borrador",
-  "Done editing": "Edición finalizada",
   "Restore version": "Restaurar versión",
   "No history yet": "Aún no hay historial",
   "Source": "Fuente",
