fix: New Czech translations from Crowdin [ci skip]

--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -138,6 +138,8 @@
   "Log out": "Odhlásit se",
   "Mark notifications as read": "Označit upozornění jako přečtená",
   "Archive all notifications": "Archivovat všechny notifikace",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Nová aplikace",
   "New Application": "Nová žádost",
   "This version of the document was deleted": "Tato verze dokumentu byla smazána",
@@ -351,6 +353,7 @@
   "Sorry, an error occurred.": "Je nám líto, došlo k chybě.",
   "Click to retry": "Kliknutím zkuste znovu",
   "Back": "Zpět",
+  "Notification options": "Notification options",
   "Unknown": "Neznámý",
   "Mark all as read": "Označit vše jako přečtené",
   "You're all caught up": "Již nic nového",
@@ -678,6 +681,7 @@
   "90 days": "90 dní",
   "No expiration": "Bez data vypršení platnosti",
   "The document archive is empty at the moment.": "Archiv dokumentů je v tuto chvíli prázdný.",
+  "Done editing": "Uložit úpravy",
   "Drop documents to import": "Přetáhněte dokumenty k importu",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> zatím neobsahuje žádné dokumenty.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} uživatel a {{ groupsCount }} skupiny s přístupem",
@@ -688,15 +692,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} uživatelů s přístupem",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} skupina s přístupem",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} skupin s přístupem",
-  "Archived by {{userName}}": "Archivoval {{userName}}",
-  "Sorry, an error occurred saving the collection": "Omlouváme se, při ukládání sbírky došlo k chybě",
-  "Add a description": "Přidat popis",
   "Overview": "Přehled",
   "Popular": "Popular",
   "Recently updated": "Nedávno aktualizováno",
   "Recently published": "Nedávno zveřejněné",
   "Least recently updated": "Naposledy aktualizováno",
   "A–Z": "A–Z",
+  "Archived by {{userName}}": "Archivoval {{userName}}",
+  "Sorry, an error occurred saving the collection": "Omlouváme se, při ukládání sbírky došlo k chybě",
+  "Add a description": "Přidat popis",
   "Signing in": "Přihlašování",
   "You can safely close this window once the Outline desktop app has opened": "Po otevření desktopové aplikace Outline můžete toto okno bezpečně zavřít",
   "Error creating comment": "Chyba při vytváření komentáře",
@@ -745,7 +749,6 @@
   "Edit {{noun}}": "Upravit {{noun}}",
   "Archived": "Archivované",
   "Save draft": "Uložit koncept",
-  "Done editing": "Uložit úpravy",
   "Restore version": "Obnovit verzi",
   "No history yet": "Zatím žádná historie",
   "Source": "Zdroj",
