fix: New Danish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/da_DK/translation.json
+++ b/shared/i18n/locales/da_DK/translation.json
@@ -138,6 +138,8 @@
   "Log out": "Log ud",
   "Mark notifications as read": "Markér notifikationer som læst",
   "Archive all notifications": "Arkiver alle notifikationer",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Ny App",
   "New Application": "Ny Applikation",
   "This version of the document was deleted": "Denne version af dokumentet er blevet slettet",
@@ -351,6 +353,7 @@
   "Sorry, an error occurred.": "Beklager, der opstod en fejl.",
   "Click to retry": "Tryk for at prøve igen",
   "Back": "Tilbage",
+  "Notification options": "Notification options",
   "Unknown": "Ukendt",
   "Mark all as read": "Marker alle som læst",
   "You're all caught up": "Du er helt ajour",
