fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -138,6 +138,8 @@
   "Log out": "Ausloggen",
   "Mark notifications as read": "Markiere Benachrichtigungen als gelesen",
   "Archive all notifications": "Archiviere alle Benachrichtigungen",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Neue Anwendung",
   "New Application": "Neue Anwendung",
   "This version of the document was deleted": "Diese Version des Dokuments wurde gelöscht",
@@ -351,6 +353,7 @@
   "Sorry, an error occurred.": "Tut uns leid, ein Fehler ist aufgetreten.",
   "Click to retry": "Erneut versuchen",
   "Back": "Zurück",
+  "Notification options": "Notification options",
   "Unknown": "Unbekannt",
   "Mark all as read": "Alle als gelesen markieren",
   "You're all caught up": "Du bist auf dem neusten Stand",
@@ -678,6 +681,7 @@
   "90 days": "90 Tage",
   "No expiration": "Ohne Ablaufdatum",
   "The document archive is empty at the moment.": "Das Dokumentenarchiv ist momentan leer.",
+  "Done editing": "Bearbeitung abschließen",
   "Drop documents to import": "Dokumente zum Importieren hier ablegen",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> enthält noch keine\n                    Dokumente.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} Benutzer und {{ groupsCount }} Gruppen mit Zugriff",
@@ -688,15 +692,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} Benutzer mit Zugriff",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} Gruppe mit Zugriff",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} Gruppen mit Zugriff",
-  "Archived by {{userName}}": "Archiviert durch {{userName}}",
-  "Sorry, an error occurred saving the collection": "Beim Speichern der Sammlung ist leider ein Fehler aufgetreten",
-  "Add a description": "Beschreibung hinzufügen",
   "Overview": "Übersicht",
   "Popular": "Popular",
   "Recently updated": "Vor Kurzem aktualisiert",
   "Recently published": "Vor Kurzem veröffentlicht",
   "Least recently updated": "Am längsten nicht aktualisiert",
   "A–Z": "A - Z",
+  "Archived by {{userName}}": "Archiviert durch {{userName}}",
+  "Sorry, an error occurred saving the collection": "Beim Speichern der Sammlung ist leider ein Fehler aufgetreten",
+  "Add a description": "Beschreibung hinzufügen",
   "Signing in": "Wird angemeldet",
   "You can safely close this window once the Outline desktop app has opened": "Du kannst dieses Fenster schließen, sobald die Outline Desktop-App geöffnet wurde",
   "Error creating comment": "Fehler beim Erstellen des Kommentars",
@@ -745,7 +749,6 @@
   "Edit {{noun}}": "{{noun}} bearbeiten",
   "Archived": "Archiviert",
   "Save draft": "Entwurf speichern",
-  "Done editing": "Bearbeitung abschließen",
   "Restore version": "Version wiederherstellen",
   "No history yet": "Noch keine Historie",
   "Source": "Quelle",
