--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -138,6 +138,8 @@
   "Log out": "Kijelentkezés",
   "Mark notifications as read": "Értesítések olvasottnak jelölése",
   "Archive all notifications": "Összes értesítés archiválása",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Új alkalmazás",
   "New Application": "Új alkalmazás",
   "This version of the document was deleted": "A dokumetnum ezen verziója törölve lett",
@@ -351,6 +353,7 @@
   "Sorry, an error occurred.": "Elnézést, valami hiba történt.",
   "Click to retry": "Kattintson az újrapróbáláshoz",
   "Back": "Vissza",
+  "Notification options": "Notification options",
   "Unknown": "Ismeretlen",
   "Mark all as read": "Összes megjelölése olvasottként",
   "You're all caught up": "Minden hozzászólást elolvasott",
@@ -678,6 +681,7 @@
   "90 days": "90 nap",
   "No expiration": "Nincs lejárat",
   "The document archive is empty at the moment.": "A dokumentum archívum jelenleg üres.",
+  "Done editing": "Változtatások mentése",
   "Drop documents to import": "Engedje el itt a dokumentumot az importáláshoz",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> nem tartalmaz egyetlen\n                    dokumentumot sem.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} felhasználó és {{ groupsCount }} csoport rendelkezik hozzáféréssel",
@@ -688,15 +692,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} felhasználó rendelkezik hozzáféréssel",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} csoport rendelkezik hozzáféréssel",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} csoport rendelkezik hozzáféréssel",
-  "Archived by {{userName}}": "Archiválta: {{userName}}",
-  "Sorry, an error occurred saving the collection": "Sajnálom, valami hiba merült fel a gyűjtemény mentése közben",
-  "Add a description": "Adja meg a leírást",
   "Overview": "Áttekintés",
   "Popular": "Popular",
   "Recently updated": "Nemrég módosítva",
   "Recently published": "Nemrég publikálva",
   "Least recently updated": "Legrégebben módosított",
   "A–Z": "A–Z",
+  "Archived by {{userName}}": "Archiválta: {{userName}}",
+  "Sorry, an error occurred saving the collection": "Sajnálom, valami hiba merült fel a gyűjtemény mentése közben",
+  "Add a description": "Adja meg a leírást",
   "Signing in": "Bejelentkezés",
   "You can safely close this window once the Outline desktop app has opened": "You can safely close this window once the Outline desktop app has opened",
   "Error creating comment": "Error creating comment",
@@ -745,7 +749,6 @@
   "Edit {{noun}}": "Edit {{noun}}",
   "Archived": "Archiválva",
   "Save draft": "Piszkozat mentése",
-  "Done editing": "Változtatások mentése",
   "Restore version": "Verzió visszaállítása",
   "No history yet": "Még nincsenek előzmények",
   "Source": "Forrás",
