fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -138,6 +138,8 @@
   "Log out": "Log out",
   "Mark notifications as read": "Segnare tutte le notifiche come lette",
   "Archive all notifications": "Archivia tutte le notifiche",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "New App",
   "New Application": "Nuova Applicazione",
   "This version of the document was deleted": "Questa versione del documento è stata eliminata",
@@ -351,6 +353,7 @@
   "Sorry, an error occurred.": "Spiacenti, si è verificato un errore.",
   "Click to retry": "Clicca per riprovare",
   "Back": "Indietro",
+  "Notification options": "Notification options",
   "Unknown": "Sconosciuto",
   "Mark all as read": "Contrassegna tutto come letto",
   "You're all caught up": "Sei completamente aggiornato",
