fix: New Japanese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -138,6 +138,8 @@
   "Log out": "ログアウト",
   "Mark notifications as read": "通知を既読済みにする",
   "Archive all notifications": "全ての通知をアーカイブ",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "新しいアプリ",
   "New Application": "New Application",
   "This version of the document was deleted": "This version of the document was deleted",
@@ -351,6 +353,7 @@
   "Sorry, an error occurred.": "エラーが発生しました",
   "Click to retry": "再試行",
   "Back": "戻る",
+  "Notification options": "Notification options",
   "Unknown": "不明",
   "Mark all as read": "全て既読にする",
   "You're all caught up": "全て確認済み",
@@ -678,6 +681,7 @@
   "90 days": "90日",
   "No expiration": "無期限",
   "The document archive is empty at the moment.": "アーカイブにはなにもありません。",
+  "Done editing": "編集完了",
   "Drop documents to import": "インポートするドキュメントをドロップ",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> にはまだ\n                    ドキュメントがありません。",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "アクセス権を持つ {{ usersCount }} 人のユーザーと {{ groupsCount }} 個のグループ",
@@ -688,15 +692,15 @@
   "{{ usersCount }} users with access_plural": "アクセス権を持つ {{ usersCount }} 人のユーザー",
   "{{ groupsCount }} groups with access": "アクセス権を持つ {{ groupsCount }} 個のグループ",
   "{{ groupsCount }} groups with access_plural": "アクセス権を持つ {{ groupsCount }} 個のグループ",
-  "Archived by {{userName}}": "{{userName}} がアーカイブしました",
-  "Sorry, an error occurred saving the collection": "コレクションの保存中にエラーが発生しました",
-  "Add a description": "説明文を追加",
   "Overview": "概要",
   "Popular": "Popular",
   "Recently updated": "更新日の新しい順",
   "Recently published": "最近公開されたもの",
   "Least recently updated": "更新日の古い順",
   "A–Z": "A-Z",
+  "Archived by {{userName}}": "{{userName}} がアーカイブしました",
+  "Sorry, an error occurred saving the collection": "コレクションの保存中にエラーが発生しました",
+  "Add a description": "説明文を追加",
   "Signing in": "ログイン中",
   "You can safely close this window once the Outline desktop app has opened": "Outline デスクトップ アプリが開いたら、このウィンドウを安全に閉じることができます",
   "Error creating comment": "コメントの作成中にエラーが発生しました",
@@ -745,7 +749,6 @@
   "Edit {{noun}}": "{{noun}} を編集",
   "Archived": "アーカイブ",
   "Save draft": "下書きを保存",
-  "Done editing": "編集完了",
   "Restore version": "復元",
   "No history yet": "履歴はありません",
   "Source": "ソース",
