fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -138,6 +138,8 @@
   "Log out": "로그아웃",
   "Mark notifications as read": "알림을 읽은 상태로 표시",
   "Archive all notifications": "모든 알림 보관",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "새로운 앱",
   "New Application": "새 애플리케이션",
   "This version of the document was deleted": "이 문서의 버전은 삭제됨",
@@ -351,6 +353,7 @@
   "Sorry, an error occurred.": "죄송합니다. 오류가 발생했습니다.",
   "Click to retry": "클릭하여 재시도하기",
   "Back": "뒤로 가기",
+  "Notification options": "Notification options",
   "Unknown": "알 수 없음",
   "Mark all as read": "모두 읽은 상태로 표시",
   "You're all caught up": "모두 확인함",
@@ -678,6 +681,7 @@
   "90 days": "90일",
   "No expiration": "만료 없음",
   "The document archive is empty at the moment.": "현재 보관 문서함이 비어 있습니다.",
+  "Done editing": "수정 완료",
   "Drop documents to import": "가져올 문서 내려놓기",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> 컬렉션에 문서가 없습니다.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "액세스 권한이 있는 사용자 {{ usersCount }} 명 및 그룹 {{ groupsCount }} 개",
@@ -688,15 +692,15 @@
   "{{ usersCount }} users with access_plural": "액세스 권한이 있는 사용자 {{ usersCount }} 명",
   "{{ groupsCount }} groups with access": "액세스 권한이 있는 그룹 {{ groupsCount }} 개",
   "{{ groupsCount }} groups with access_plural": "액세스 권한이 있는 그룹 {{ groupsCount }} 개",
-  "Archived by {{userName}}": "{{userName}} 에 의해 보관됨",
-  "Sorry, an error occurred saving the collection": "컬렉션을 저장하는 중에 오류가 발생했습니다.",
-  "Add a description": "설명 추가",
   "Overview": "개요",
   "Popular": "Popular",
   "Recently updated": "최근에 업데이트됨",
   "Recently published": "최근에 게시됨",
   "Least recently updated": "오래된 순",
   "A–Z": "A-Z",
+  "Archived by {{userName}}": "{{userName}} 에 의해 보관됨",
+  "Sorry, an error occurred saving the collection": "컬렉션을 저장하는 중에 오류가 발생했습니다.",
+  "Add a description": "설명 추가",
   "Signing in": "로그인 중",
   "You can safely close this window once the Outline desktop app has opened": "Outline desktop 앱이 열리면 이 창을 안전하게 닫을 수 있습니다.",
   "Error creating comment": "댓글을 만드는 중에 오류가 발생했습니다.",
@@ -745,7 +749,6 @@
   "Edit {{noun}}": "{{noun}} 수정하기",
   "Archived": "보관됨",
   "Save draft": "임시 저장",
-  "Done editing": "수정 완료",
   "Restore version": "버전 복원",
   "No history yet": "아직 기록이 없습니다",
   "Source": "원본",
