--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -138,6 +138,8 @@
   "Log out": "Uitloggen",
   "Mark notifications as read": "Meldingen als gelezen markeren",
   "Archive all notifications": "Alle meldingen archiveren",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Nieuwe app",
   "New Application": "Nieuwe applicatie",
   "This version of the document was deleted": "Deze versie van het document is verwijderd",
@@ -351,6 +353,7 @@
   "Sorry, an error occurred.": "Sorry, er is iets fout gegaan.",
   "Click to retry": "Klik om opnieuw te proberen",
   "Back": "Terug",
+  "Notification options": "Notification options",
   "Unknown": "Onbekend",
   "Mark all as read": "Markeer alles als gelezen",
   "You're all caught up": "Je bent helemaal bij",
@@ -678,6 +681,7 @@
   "90 days": "90 dagen",
   "No expiration": "Geen vervaldatum",
   "The document archive is empty at the moment.": "Het documentenarchief is momenteel leeg.",
+  "Done editing": "Klaar met bewerken",
   "Drop documents to import": "Sleep documenten hier naartoe om ze te importeren",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> bevat nog geen documenten.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} gebruikers en {{ groupsCount }} groepen met toegang",
@@ -688,15 +692,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} gebruikers hebben toegang",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} groepen hebben toegang",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} groepen hebben toegang",
-  "Archived by {{userName}}": "Gearchiveerd door {{userName}}",
-  "Sorry, an error occurred saving the collection": "Er is een fout opgetreden bij het opslaan van de collectie",
-  "Add a description": "Beschrijving toevoegen",
   "Overview": "Overzicht",
   "Popular": "Populair",
   "Recently updated": "Onlangs bijgewerkt",
   "Recently published": "Onlangs gepubliceerd",
   "Least recently updated": "Minst recent bijgewerkt",
   "A–Z": "A–Z",
+  "Archived by {{userName}}": "Gearchiveerd door {{userName}}",
+  "Sorry, an error occurred saving the collection": "Er is een fout opgetreden bij het opslaan van de collectie",
+  "Add a description": "Beschrijving toevoegen",
   "Signing in": "Inloggen",
   "You can safely close this window once the Outline desktop app has opened": "Je kunt dit venster veilig sluiten zodra de Outline desktop app is geopend",
   "Error creating comment": "Fout bij maken reactie",
@@ -745,7 +749,6 @@
   "Edit {{noun}}": "Wijzig {{noun}}",
   "Archived": "Gearchiveerd",
   "Save draft": "Bewaar concept",
-  "Done editing": "Klaar met bewerken",
   "Restore version": "Versie herstellen",
   "No history yet": "Nog geen geschiedenis",
   "Source": "Bron",
