fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -138,6 +138,8 @@
   "Log out": "Wyloguj",
   "Mark notifications as read": "Oznaczaj powiadomienia jako przeczytane",
   "Archive all notifications": "Archiwizuj wszystkie powiadomienia",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Nowa aplikacja",
   "New Application": "Nowa aplikacja",
   "This version of the document was deleted": "Ta wersja dokumentu została usunięta",
@@ -351,6 +353,7 @@
   "Sorry, an error occurred.": "Przepraszamy, wystąpił błąd.",
   "Click to retry": "Kliknij, aby spróbować ponownie",
   "Back": "Wstecz",
+  "Notification options": "Notification options",
   "Unknown": "Nieznane",
   "Mark all as read": "Oznacz wszystkie jako przeczytane",
   "You're all caught up": "Jesteś na bieżąco",
@@ -678,6 +681,7 @@
   "90 days": "90 dni",
   "No expiration": "Bez daty wygaśnięcia",
   "The document archive is empty at the moment.": "Archiwum dokumentów jest obecnie puste.",
+  "Done editing": "Zakończ edycję",
   "Drop documents to import": "Upuść dokumenty do zaimportowania",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> nie zawiera jeszcze żadnych dokumentów.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} użytkownik i {{ groupsCount }} grupy z dostępem",
@@ -688,15 +692,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} użytkowników z dostępem",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} grupa z dostępem",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} grup z dostępem",
-  "Archived by {{userName}}": "Zarchiwizowane przez {{userName}}",
-  "Sorry, an error occurred saving the collection": "Przepraszamy, wystąpił błąd podczas zapisywania kolekcji",
-  "Add a description": "Dodaj opis",
   "Overview": "Informacje ogólne",
   "Popular": "Popular",
   "Recently updated": "Ostatnio zaktualizowane",
   "Recently published": "Ostatnio opublikowane",
   "Least recently updated": "Najmniej ostatnio zaktualizowane",
   "A–Z": "A–Z",
+  "Archived by {{userName}}": "Zarchiwizowane przez {{userName}}",
+  "Sorry, an error occurred saving the collection": "Przepraszamy, wystąpił błąd podczas zapisywania kolekcji",
+  "Add a description": "Dodaj opis",
   "Signing in": "Logowanie...",
   "You can safely close this window once the Outline desktop app has opened": "Możesz bezpiecznie zamknąć to okno po otwarciu aplikacji komputerowej Outline",
   "Error creating comment": "Wystąpił błąd podczas tworzenia komentarza",
@@ -745,7 +749,6 @@
   "Edit {{noun}}": "Edytuj {{noun}}",
   "Archived": "Zarchiwizowano",
   "Save draft": "Zapisz wersję roboczą",
-  "Done editing": "Zakończ edycję",
   "Restore version": "Przywróć wersję",
   "No history yet": "Nie ma jeszcze historii",
   "Source": "Źródło",
