fix: New Portuguese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -138,6 +138,8 @@
   "Log out": "Deslogar",
   "Mark notifications as read": "Marcar notificações como lidas",
   "Archive all notifications": "Arquivar todas as notificações",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "New App",
   "New Application": "New Application",
   "This version of the document was deleted": "This version of the document was deleted",
@@ -351,6 +353,7 @@
   "Sorry, an error occurred.": "Desculpa, ocorreu um erro.",
   "Click to retry": "Clique para tentar de novo",
   "Back": "Voltar",
+  "Notification options": "Notification options",
   "Unknown": "Desconhecido",
   "Mark all as read": "Marcar todos como lido",
   "You're all caught up": "Já estás a par de tudo",
@@ -678,6 +681,7 @@
   "90 days": "90 dias",
   "No expiration": "Sem expiração",
   "The document archive is empty at the moment.": "O arquivo do documento está vazio neste momento.",
+  "Done editing": "Edição concluída",
   "Drop documents to import": "Arraste documentos para importar",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> não contém\n                    documentos ainda.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} utilizador e {{ groupsCount }} grupos com acesso",
@@ -688,15 +692,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} utilizadores com acesso",
   "{{ groupsCount }} groups with access": "{{ usersCount }} grupo com acesso",
   "{{ groupsCount }} groups with access_plural": "{{ usersCount }} grupos com acesso",
-  "Archived by {{userName}}": "Arquivado por {{userName}}",
-  "Sorry, an error occurred saving the collection": "Ocorreu um erro ao guardar a coleção",
-  "Add a description": "Adicionar descrição",
   "Overview": "Overview",
   "Popular": "Popular",
   "Recently updated": "Atualizado recentemente",
   "Recently published": "Publicado recentemente",
   "Least recently updated": "Menos atualizado recentemente",
   "A–Z": "A–Z",
+  "Archived by {{userName}}": "Arquivado por {{userName}}",
+  "Sorry, an error occurred saving the collection": "Ocorreu um erro ao guardar a coleção",
+  "Add a description": "Adicionar descrição",
   "Signing in": "A iniciar sessão",
   "You can safely close this window once the Outline desktop app has opened": "Pode fechar com segurança esta janela quando a aplicação Outline de ambiente de trabalho abrir",
   "Error creating comment": "Erro ao criar comentário",
@@ -745,7 +749,6 @@
   "Edit {{noun}}": "Editar {{noun}}",
   "Archived": "Arquivado",
   "Save draft": "Guardar rascunho",
-  "Done editing": "Edição concluída",
   "Restore version": "Restaurar versão",
   "No history yet": "Ainda sem histórico",
   "Source": "Fonte",
